[tool.poetry]
name = "repl_python3_gen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiosonic = "^0.14.0"
colorama = "^0.4.4"
discord-webhook = "^0.14.0"
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
